--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@ layout: default
     {% include skills.html skills=site.data.skills %}
 </section>
 
-<section id="portfolio" class="section" >
+<!--<section id="portfolio" class="section" >
 
     {% include portfolio.html items=site.data.portfolio.data %}
 
-</section>
+</section> -->
 
 <section id="education" class="section">
     {% include education.html %}
