--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ layout: default
     {% include experiences.html experiences=site.data.experiences %}
 </section>
 
-<section id="skills" class="section" >
+<!--<section id="skills" class="section" >
     {% include skills.html skills=site.data.skills %}
-</section>
+</section> -->
 
 <!--<section id="portfolio" class="section" >
 
