--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <h3 class="section-heading text-center "> Get in Touch</h3>
     <div class="row contact-section">
         <div class="col-md-2 image">
-            <img src="/images/profile.jpg " alt="Profile Image" class="rounded-circle mx-auto d-block img-fluid profile-pic ">
+            <img src="/images/Profile.jpg " alt="Profile Image" class="rounded-circle mx-auto d-block img-fluid profile-pic ">
             <p class="text-center padding-top-5">Ankanna</p>
         </div>
 
