--- a/footer.html
+++ b/footer.html
@@ -6,7 +6,7 @@
               
 
                 <li class="padding-top-3">
-                    <i class="fa fa-envelope padding-right-10"></i> <a href="mailto: taffgal@gmail.com">taffgal@gmail.com</a>
+                    <i class="fa fa-envelope padding-right-10"></i> <a href="mailto: gary@garyllewellyn.us">gary@garyllewellyn.us</a>
                 </li>
 
                 <li class="padding-top-3">
