--- a/contact.html
+++ b/contact.html
@@ -1,47 +1,24 @@
 <div class="container">
   <h3 class="section-heading text-center"> Get in Touch</h3>
-  <div class="row contact-section">
-    <div class="col-md-2 image text-center">
+  <div class="row contact-section justify-content-center align-items-center">
+    <div class="col-12 col-md-2 text-center">
       <img src="/images/Profile.jpg" alt="Profile Image" class="rounded-circle mx-auto d-block img-fluid profile-pic">
-      <p class="text-center padding-top-5">Ankanna</p>
+      <p class="text-center padding-top-5">Gary Llewellyn</p>
     </div>
 
-    <div class="col-md-10">
-      <p class="text-justify description">
-        I'm looking for the right opportunity where I can enrich my skills and serve wholeheartedly without being under
-        pressure and overdose. I'm currently taking on freelancing work and open for remote work aswell. I feel
-        great things will happen when you are set free to work on I mean the Free style of
-        coding. No excuse for me to learn new things from the great people like you and of course hardworking. I feel great pleasure working with
-        you and your team if I am recruited Our Team. <strong> Cheers ! </strong></p>
-
-      <p class="thanks theme-color padding-top-10"> Many Thanks :) </p>
-
-      <p class=" padding-top-5 helping-line">I can help with the following:</p>
-          <ul class="list-unstyled list">
-
-              <li class="padding-top-25 padding-left-50"><i class="fa fa-check theme-color contact-icon" >  </i> Backend Development - Phoenix/Elixir </li>
-              <li class="padding-top-25 padding-left-50"><i class="fa fa-check theme-color contact-icon" >  </i> Frontend Development - EmberJs </li>
-              <li class="padding-top-25 padding-left-50"><i class="fa fa-check theme-color contact-icon" >  </i> UI -Designing Adobe Illustrator/Photoshop </li>
-              <li class="padding-top-25 padding-left-50"><i class="fa fa-check theme-color contact-icon" >  </i> Video - Editing  Adobe PremierPro/After effects </li>
-
-          </ul>
-          <span>Happy to learn New Things on demand of Technology </span>
-
-      <!-- Centered contact box -->
-      <div class="d-flex justify-content-center padding-top-3">
+    <div class="col-12 col-md-8">
+      <div class="d-flex justify-content-center">
         <div class="contact-box text-center p-3" style="max-width:640px; width:100%; border-radius:6px;">
           <p class="info mb-0">
-            Drop me a line at <span class="theme-color"> <a href="mailto:hello@blackode.in">hello@blackode.in</a> </span> or call me at <span class="theme-color"> 0 9494 5072 87 </span>
+            E-Mail me at <span class="theme-color"><a href="mailto:gary@garyllewellyn.us">gary@garyllewellyn.us</a></span>
+            or call me at <span class="theme-color">978-624-8441</span>
           </p>
         </div>
       </div>
 
-      <div class="social-media padding-top-2 text-center">
-        {% include social.html social= site.data.profile.social %}
+      <div class="social-media text-center mt-3">
+        {% include social.html social=site.data.profile.social %}
       </div>
-
     </div>
-
   </div>
-
 </div>
